--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "finanzas-vasquez",
-  "version": "1.2.1",
+  "name": "finanzas-app",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,13 +17,13 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
+    "prisma": "5.10.2",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^13.0.0",
-    "prisma": "5.10.2"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
